[package]
name = "ttn_rust"
version = "0.0.1"
authors = ["MTRNord <mtrnord1@gmail.com>"]
repository = "https://github.com/Nucleon-eV/TTN-Rust"
readme = "README.md"
edition = "2018"
build = "build.rs"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
grpc = "0.6.1"
protobuf = "2.5.0"
futures = "0.1.27"
futures-cpupool = "0.1.8"

[build-dependencies]
protoc-rust-grpc = "0.6.1"
dirs = "1.0.5"